# 6502-emu

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ci.ps1  ci.sh  cov.ps1  rustfmt.toml
.github/workflows/: CI.yml
cli/: Cargo.toml
cli/src/: args.rs  bin_file.rs  console_io.rs  dbg_cmd.pest  dbg_cmd_parser.rs  debug_loop.rs  debugger.rs  main.rs
cli/tests/assets/: euclid_gcd.asm  euclid_gcd.prg  simplest.asm  simplest.prg
cli/tests/assets/msbasic/: basic4.prg  readme.md
docs/: 6502ops.xlsx  Learning_Rust.md  readme.md
emulator/: Cargo.toml  build.rs
emulator/src/: address_bus.rs  address_bus2.rs  cpu.rs  cpu_controller.rs  cpu_impl.rs  cpu_traps.rs  debugger.rs  disassembler.rs  lib.rs  memory.rs  memory_access.rs  stack_pointer.rs  status_register.rs
emulator/src/engine/: decoder.rs  handlers.rs  mod.rs  opcodes-mos6502.csv  opcodes.rs
emulator/src/engine/ops/: alu.rs  branch_jump.rs  flag_branch.rs  flag_compare.rs  interrupt.rs  mod.rs  stack.rs  transfer.rs
emulator/tests/: cpu_api_tests.rs  euclid_gcd.md  euclid_gdc.md  euclid_tests.rs
