[package]
name = "r6502"
description = "A 6502 emulator written in Rust"
authors = ["David Jenni"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/davidjenni/6502-emu"
homepage = "https://github.com/davidjenni/6502-emu"
license = "MIT"
# license-file = "LICENSE"
categories = ["emulator", "hardware-support"]
keywords = ["6502", "emulator", "vintage-computers", "rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive", "help", "usage"] }
clap-num = "1.0.2"
mos6502-emulator = { version = "0.1.0", path = "../emulator" }
thiserror = "1.0.48"
